# CS231

./: .gitignore  CMakeLists.txt
haskel_lab_1/: soren.hs
haskel_lab_2/: wrapInsert.hs
haskel_lab_3/: addInts.hs
haskel_project_1/: DocTransformer.hs  Main.hs  in.txt  out.txt
haskel_project_2/: Main.hs  out.txt
haskel_project_3/: Main.hs  test.js  tmpDictionary.tmp
project_1_change_case/: in.txt  main.c  out.txt
project_2_stack/: README.txt  parenthesization.c  postfix_eval.c
project_2_stack/stack/: stack.c  stackADT.h
project_2_stack/stack/data_types/: charType.c  charType.h  doubleType.c  doubleType.h
project_2_stack/test_files/: in.txt  in.txt.parenth  out.txt
project_3_reverse_words/: caseWorker  caseWorker.c  in.txt  lengthCheck  lengthCheck.c  out.txt  parent  parent.c  reverse  reverse.c  wordGrab  wordGrab.c
testing_programs/: env  env.c  test  test.c
